Fixed the pages mostly.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -20,10 +20,8 @@ const pageTitle = "StarMetal Sessions";
 <nav class="navbar">
     <ul>
         <div class="home"><li><a href="/">Home</a></li></div>
-        <div class="seshs"><li><a href="/seshs/">Seshs</a></li></div>
-        <div class="characters">
-            <li><a href="/characters/">Characters</a></li>
-        </div>
+        <div class="Projects"><li><a href="/projects/">Projects</a></li></div>
+        <div class="ideas"><li><a href="/ideas/">Ideas</a></li></div>
         <div class="links">
             <li><a href="/usefulLinks/">Useful Links</a></li>
         </div>
