--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,8 +7,9 @@ body {
     flex-direction: column;
     min-height: 100vh;
     /* Ensure full height */
-    background-image: url("Images/Wallpaper.png");
+    background-image: url("Images/RayTracing.png");
     box-shadow: inset 0 0 20em rgba(0, 0, 0, 0.5);
+    background-size: cover;
 }
 
 /* Navbar styles */
