--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,9 +7,10 @@ body {
     flex-direction: column;
     min-height: 100vh;
     /* Ensure full height */
-    background-image: url("Images/RayTracing.png");
+    background-image: url("Images/_RayTracing.png");
     box-shadow: inset 0 0 20em rgba(0, 0, 0, 0.5);
-    background-size: cover;
+    background-size: auto;
+    background-position: center;
 }
 
 /* Navbar styles */
