--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,14 +3,14 @@ body {
     font-family: Arial, sans-serif;
     padding-top: 50px;
     margin: 0;
+    min-height: 100vh;
+    box-shadow: inset 0 0 20em rgba(0, 0, 0, 0.5);
+    background-image: url("Images/_RayTracing.png");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    /* Ensure full height */
-    background-image: url("Images/_RayTracing.png");
-    box-shadow: inset 0 0 20em rgba(0, 0, 0, 0.5);
-    background-size: auto;
-    background-position: center;
 }
 
 /* Navbar styles */
