--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Head from "../components/Head.astro";
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 ---
@@ -12,7 +13,8 @@ import "../styles/global.css";
         <title>Blender</title>
     </head>
     <body>
-        <Navigation />
+        <Head />
+        <Header />
         <main class="content">
             <div class="markdown-content">
                 <slot />
