--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/index.css";
 ---
@@ -12,7 +12,7 @@ import "../styles/index.css";
         <title>Blender</title>
     </head>
     <body>
-        <Navigation />
+        <Header />
         <main class="content">
             <slot />
         </main>
