--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,6 @@
 /* Reset body margins and set min-height */
 body {
     font-family: Arial, sans-serif;
-    padding-top: 50px;
     margin: 0;
     min-height: 100vh;
     box-shadow: inset 0 0 20em rgba(0, 0, 0, 0.5);
@@ -13,50 +12,22 @@ body {
     flex-direction: column;
 }
 
-/* Navbar styles */
-.navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: hsl(0, 0%, 25%);
-    z-index: 1000;
-}
-
-.navbar ul {
-    list-style-type: none;
-    background-color: hsl(0, 0%, 25%);
+a {
+    background-image: linear-gradient(var(oklch(85.5% 0.138 181.071)) 0 0);
     padding: 0;
-    margin: 0;
-    overflow: hidden;
-}
-
-.navbar a {
-    color: white;
+    background-size: 0%;
+    transition: 0.4s;
     text-decoration: none;
-    padding: 15px;
-    display: block;
-    text-align: center;
 }
 
-.navbar a:hover {
-    background-color: hsl(0, 0%, 10%);
-}
-
-.navbar li {
-    float: left;
+a:hover {
+    background-size: 100%;
+    background-repeat: no-repeat;
+    text-decoration: underline;
 }
 
 /* Content should expand to push footer down */
 .content {
     flex: 1;
     padding: 20px;
-}
-
-/* Sticky footer */
-.footer {
-    background-color: hsl(0, 0%, 25%);
-    color: white;
-    text-align: center;
-    padding: 0;
 }
